--- a/Bind/Src/Iniciativas.fx.yaml
+++ b/Bind/Src/Iniciativas.fx.yaml
@@ -9026,7 +9026,7 @@
             PressedFill: =RGBA(0, 121, 187, 1)
             Reset: =_VarResetFiltro
             SearchFields: =["ComplianceAssetId"]
-            SearchItems: =Search(Lst_Plan_Riesgo_Oportunidad,Cmb_Filtro_Soluciones_1.SearchText,'Compliance Asset Id')
+            SearchItems: =Search(Lst_Plan_Riesgo_Oportunidad,Cmb_Filtro_Soluciones_1.SearchText,ComplianceAssetId)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: ="Prioridad"
