--- a/Bind/CanvasManifest.json
+++ b/Bind/CanvasManifest.json
@@ -71,6 +71,7 @@
       "longlivingcache": false,
       "mobilenativerendering": false,
       "nativecdsexperimental": true,
+      "offlineprofilegenerationemitscolumns": false,
       "onegrid": false,
       "optimizedforteamsmeeting": false,
       "packagemodernruntime": false,
@@ -100,7 +101,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 82,
+    "BindingErrorCount": 87,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -160,6 +161,7 @@
     "ModuloFinanciadoNegocio",
     "ModuloPersonaV1",
     "ModuloEquipoV1",
-    "ModuloGestionEquipoV1"
+    "ModuloGestionEquipoV1",
+    "ModuloPersonaV1_1"
   ]
 }
