--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -939,7 +939,7 @@ ListadoIniciativas As screen:
             Reset: |
                 =Valor = "Producto" || Valor = "Proyecto"
             SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
-            SearchItems: =Search(Filter(Col_BD_Portafolio,Iniciativa = true),Cmb_FiltroJefePO_3.SearchText,'Nombre Producto/Proyecto')
+            SearchItems: =Search(Filter(Col_BD_Portafolio,Iniciativa = true),Cmb_FiltroJefePO_3.SearchText,Nombre_x0020_Producto_x002f_Proy)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
