--- a/Bind/pkgs/PcfConversions/PowerApps_CoreControls_InfoButtonCanvas.json
+++ b/Bind/pkgs/PcfConversions/PowerApps_CoreControls_InfoButtonCanvas.json
@@ -64,7 +64,37 @@
       ],
       "From": "0.0.22",
       "To": "0.0.23"
+    },
+    {
+      "Action": [
+        {
+          "Name": "IconColor",
+          "Type": "add"
+        },
+        {
+          "Name": "PaddingTop",
+          "Type": "add"
+        },
+        {
+          "Name": "PaddingRight",
+          "Type": "add"
+        },
+        {
+          "Name": "PaddingBottom",
+          "Type": "add"
+        },
+        {
+          "Name": "PaddingLeft",
+          "Type": "add"
+        },
+        {
+          "Name": "IconSize",
+          "Type": "remove"
+        }
+      ],
+      "From": "0.0.30",
+      "To": "0.0.31"
     }
   ],
-  "Version": "0.0.30"
+  "Version": "0.0.31"
 }
