--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -686,7 +686,7 @@ ListadoIniciativas As screen:
             )
         Height: =Txt_FondoForm1_171.Height -10
         HoverBorderColor: =RGBA(0, 121, 187, 1)
-        Items: =Lst_Plan_Prioridad
+        Items: =Filter(Lst_Plan_Prioridad,AnnoPrioridad="2024")
         OnChange: |
             =UpdateContext({_VarMostrarCuadroBloqueo:false});
             If(
@@ -698,7 +698,7 @@ ListadoIniciativas As screen:
         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
         PressedFill: =RGBA(0, 121, 187, 1)
         SearchFields: =["NombrePrioridad"]
-        SearchItems: =Search(Lst_Plan_Prioridad,Dpd_FiltroProyeProd_2.SearchText,NombrePrioridad)
+        SearchItems: =Search(Filter(Lst_Plan_Prioridad,AnnoPrioridad="2024"),Dpd_FiltroProyeProd_2.SearchText,NombrePrioridad)
         SelectionFill: =RGBA(0, 121, 187, 1)
         SelectMultiple: =false
         Tooltip: =
@@ -990,7 +990,7 @@ ListadoIniciativas As screen:
                 )
             Height: =Txt_FondoForm1_171.Height -10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
-            Items: =Lst_Plan_Objetivos
+            Items: =Filter(Lst_Plan_Objetivos,AnnoObjetivo="2024")
             OnChange: |
                 =UpdateContext({_VarMostrarCuadroBloqueo:false});
                 If(
@@ -1002,7 +1002,7 @@ ListadoIniciativas As screen:
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["NombreObjetivo"]
-            SearchItems: =Search(Lst_Plan_Objetivos,Cmb_FiltroNombre_8.SearchText,NombreObjetivo)
+            SearchItems: =Search(Filter(Lst_Plan_Objetivos,AnnoObjetivo="2024"),Cmb_FiltroNombre_8.SearchText,NombreObjetivo)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
